[fix] post 세팅 수정

--- a/.gitignore
+++ b/.gitignore
@@ -291,3 +291,6 @@ pip-selfcheck.json
 *.code-workspace
 
 # End of https://www.toptal.com/developers/gitignore/api/django,python,venv,visualstudiocode
+users/migrations/
+
+posts/migrations/
