--- a/.gitignore
+++ b/.gitignore
@@ -266,6 +266,7 @@ pyvenv.cfg
 pip-selfcheck.json
 
 ### VisualStudioCode ###
+.vscode/
 .vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
@@ -295,8 +296,11 @@ users/migrations/
 
 posts/migrations/
 
-place/
+place/migrations/
 
 comments/migrations/
 
 likes/migrations/
+
+# 맥북
+.DS_Store
