--- a/.gitignore
+++ b/.gitignore
@@ -304,3 +304,5 @@ comments/migrations
 
 # End of https://www.toptal.com/developers/gitignore/api/django,python,venv,visualstudiocode
 
+
+notice/migrations/
