--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 asgiref==3.5.2
+bleach==5.0.1
 certifi==2022.6.15
 cffi==1.15.1
 charset-normalizer==2.1.0
@@ -6,48 +7,18 @@ cryptography==37.0.4
 defusedxml==0.7.1
 Django==4.1
 django-allauth==0.51.0
-idna==3.3
-oauthlib==3.2.0
-Pillow==9.2.0
-pycparser==2.21
-PyJWT==2.4.0
-python3-openid==3.2.0
-requests==2.28.1
-requests-oauthlib==1.3.1
-sqlparse==0.4.2
-tzdata==2022.1
-urllib3==1.26.11
-asgiref==3.5.2
-beautifulsoup4==4.11.1
-bs4==0.0.1
-certifi==2022.6.15
-cffi==1.15.1
-charset-normalizer==2.1.0
-cryptography==37.0.4
-defusedxml==0.7.1
-diff-match-patch==20200713
-Django==4.0.6
-django-allauth==0.51.0
 django-environ==0.9.0
-django-import-export==2.8.0
-et-xmlfile==1.1.0
+django-summernote==0.8.20.0
 idna==3.3
-MarkupPy==1.14
 oauthlib==3.2.0
-odfpy==1.4.1
-openpyxl==3.0.10
 Pillow==9.2.0
 pycparser==2.21
 PyJWT==2.4.0
 python3-openid==3.2.0
-PyYAML==6.0
 requests==2.28.1
 requests-oauthlib==1.3.1
-soupsieve==2.3.2.post1
+six==1.16.0
 sqlparse==0.4.2
-tablib==3.2.1
-tzdata==2022.1
-urllib3==1.26.10
-xlrd==2.0.1
-xlwt==1.3.0
-django-summernote==0.8.20.0
+tzdata==2022.2
+urllib3==1.26.11
+webencodings==0.5.1
