--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ cryptography==37.0.4
 defusedxml==0.7.1
 Django==4.1
 django-allauth==0.51.0
+django-debug-toolbar==3.6.0
 django-environ==0.9.0
 django-summernote==0.8.20.0
 idna==3.3
