--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ Django==4.1
 django-allauth==0.51.0
 django-debug-toolbar==3.6.0
 django-environ==0.9.0
+django-mathfilters==1.0.0
 django-summernote==0.8.20.0
 idna==3.3
 oauthlib==3.2.0
@@ -18,6 +19,7 @@ PyJWT==2.4.0
 python3-openid==3.2.0
 requests==2.28.1
 requests-oauthlib==1.3.1
+simplejson==3.17.6
 six==1.16.0
 sqlparse==0.4.2
 tzdata==2022.2
