[docs] uwsgi 백그라운드 실행 설정

--- a/config/uwsgi/moco.ini
+++ b/config/uwsgi/moco.ini
@@ -6,7 +6,9 @@ home = /srv/moco/venv
 uid = ubuntu
 gid = ubuntu
  
-http = :8080
+socket = /tmp/moco.sock
+chmod-socket = 666
+chown-socket = ubuntu:ubuntu
  
 enable-threads = true
 master = true
