--- a/config/nginx/moco.conf
+++ b/config/nginx/moco.conf
@@ -8,4 +8,8 @@ server {
         uwsgi_pass  unix:///tmp/moco.sock;
         include     uwsgi_params;
     }
+
+    location /static/ {
+        alias /srv/moco/static/;
+    }
 }
