[feat] media 추가

--- a/config/nginx/moco.conf
+++ b/config/nginx/moco.conf
@@ -12,4 +12,8 @@ server {
     location /static/ {
         alias /srv/moco/static/;
     }
+
+    location /media/ {
+    alias /srv/EC2_Deploy_Project/mysite/media/;
+    }
 }
