--- a/config/nginx/moco.conf
+++ b/config/nginx/moco.conf
@@ -14,6 +14,6 @@ server {
     }
 
     location /media/ {
-    alias /srv/EC2_Deploy_Project/mysite/media/;
+        alias /srv/moco/media/;
     }
 }
