--- a/config/uwsgi/moco.ini
+++ b/config/uwsgi/moco.ini
@@ -1,11 +1,13 @@
 [uwsgi]
 chdir = /srv/moco/
 module = config.wsgi:application
-home = /srv/moco/venv
+home = /home/ubuntu/myvenv/
  
 uid = ubuntu
 gid = ubuntu
- 
+
+http = :8080
+
 socket = /tmp/moco.sock
 chmod-socket = 666
 chown-socket = ubuntu:ubuntu
