--- a/config/nginx/moco.conf
+++ b/config/nginx/moco.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name *.compute.amazonaws.com *.moco-community.com;
+    server_name *.compute.amazonaws.com *.moco-coding.com;
     charset utf-8;
     client_max_body_size 128M;
  
