[fix] 설정값 변경

--- a/config/nginx/moco.conf
+++ b/config/nginx/moco.conf
@@ -16,4 +16,8 @@ server {
     location /media/ {
         alias /srv/moco/media/;
     }
+
+    if ($http_x_forwarded_proto = 'http'){
+    return 301 https://$host$request_uri;
+    }
 }
